# genesis

./: .cea.cpp.swp  .cea.h.swp  Makefile  cea.cpp  cea.h  frames.pcap  run.pcap  sim.x  test.cpp
automation/: gencpp.py  offset_calc.ods  property_matrix.xlsx
automation/stream_db/: Makefile  StreamDB.xls  basic.py  gen_cea.py  streams.xls
automation/to_str/: input.data  to_str.py
automation/tostr/: batch_convert.py
scripts/: gitall
src/: cea.cpp  cea.h
test/: Makefile  test.cpp
versions/mark_01/: Makefile  cea.cpp  notes  test.cpp
versions/mark_02/: cea.h  notes
versions/mark_03/: notes  test.cpp
versions/mark_04_rearch/: Makefile  cea.cpp  cea.h
versions/mark_05/: cea.h  test.cpp
versions/mark_06_rearch/: Makefile  cea.cpp  cea.h
versions/mark_07/: Makefile  cea.cpp
versions/mark_07_1/: cea.cpp
versions/mark_07_2_restart/: cea.h
versions/mock/project/: CMakeLists.txt  Makefile  build.py  test.cpp
versions/mock/project/app/: test.cpp
versions/mock/project/include/: cea.h  cea_common.h  cea_field.h  cea_header.h  cea_port.h  cea_stream.h  cea_testbench.h  cea_udf.h
versions/mock/project/private/: cea_internal.h
versions/mock/project/src/: cea_field.cpp  cea_header.cpp  cea_port.cpp  cea_stream.cpp  cea_testbench.cpp  cea_udf.cpp
work/: Makefile  TODO  abort.cpp  cea_genspec.cpp  findif.cpp  findif_id.cpp  findif_id_func.cpp  friend.cpp  get1.cpp  in_range.cpp  ipaddr_inc_dec_rnd.cpp  iterator_prev.cpp  loops.cpp  memcpyOrdrer.cpp  regex.cpp  rnd.cpp  rndperf.cpp  string_repeat.cpp  test.cpp  utils.h  vec_iter_erase_test.cpp
(+120 files in other folders)
